fix(select): prevent dropdown list from covering the helper text
When the dropdown list is displayed, if there is helper text,
the list should not cover the helper text so that the users can
still read it. This is specially important for keyboard navigation
as helper text will not be displayed (next commit) unless
the element is focused. Also chipset and Picker currently
work the correct way like explained above.

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -47,7 +47,7 @@
 }
 
 .limel-select {
-    height: shared_input-select-picker.$height-of-mdc-text-field;
+    flex-wrap: wrap;
     width: 100%;
 
     &:not(.limel-select--readonly) {
@@ -57,9 +57,9 @@
     }
 
     .limel-select-trigger {
+        height: shared_input-select-picker.$height-of-mdc-text-field;
         display: inline-flex;
         align-items: center;
-        height: 100%;
 
         cursor: pointer;
         border-radius: functions.pxToRem(5);
@@ -163,8 +163,8 @@ select.limel-select__native-control {
 
 :host(.is-narrow) {
     .limel-select {
-        height: functions.pxToRem(36);
         .mdc-select__anchor {
+            height: functions.pxToRem(36);
             padding-left: functions.pxToRem(0);
         }
     }
